# cmakePractise

./: README.md
01-basic/A-hello-cmake/: CMakeLists.txt  main.cpp
01-basic/B-hello-header/: CMakeLists.txt
01-basic/B-hello-header/include/: Hello.h
01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/include/static/: Hello.h
01-basic/C-static-library/src/: Hello.cpp
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/src/: Hello.cpp  main.cpp
